--- a/views/index.html
+++ b/views/index.html
@@ -1,32 +1,15 @@
 <!DOCTYPE html>
-
 <html>
-   <head>
-      <title>Timestamp Microservice | freeCodeCamp.org</title>
-      <link rel="shortcut icon" href="https://cdn.freecodecamp.org/universal/favicons/favicon-32x32.png" type="image/x-icon"/>
-      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
-      <link href="style.css" rel="stylesheet" type="text/css">
-   </head>
-
-   <body>
-    <h1>Timestamp Microservice</h1>
-    <hr />
-    <div class="container">
-      <h2>Example Usage:</h2>
-      <ul>
-        <li><a href="api/2015-12-25">[project url]/api/2015-12-25</a></li>
-        <li><a href="api/1451001600000">[project url]/api/1451001600000</a></li>
-      </ul>
-
-      <h2>Example Output:</h2>
-      <p>
-        <code>{"unix":1451001600000, "utc":"Fri, 25 Dec 2015 00:00:00 GMT"}</code>
-      </p>
-    </div>
-    <div class="footer">
-      <p>
-        By <a href="https://www.freecodecamp.org/">freeCodeCamp.org</a>
-      </p>
-    </div>
-  </body>
+<head>
+  <title>Timestamp Microservice</title>
+</head>
+<body>
+  <h1>Welcome to the Timestamp Microservice</h1>
+  <p>Use the API endpoints to retrieve Unix and UTC timestamps:</p>
+  <ul>
+    <li><a href="/api/hello">/api/hello</a> - JSON greeting</li>
+    <li><a href="/api/2022-12-25">/api/2022-12-25</a> - Timestamp for a specific date</li>
+    <li><a href="/api/1451001600000">/api/1451001600000</a> - Timestamp for a Unix time</li>
+  </ul>
+</body>
 </html>
